# mai_oop_lab_07

./: .gitignore  CMakeLists.txt  README.md  input.txt  main.cpp
include/: core.h  dragon.h  factory_npc.h  frog.h  knight_errant.h  npc.h  observer.h  visitor_simulate_fight.h
src/: core.cpp  dragon.cpp  factory_npc.cpp  frog.cpp  knight_errant.cpp  npc.cpp  observer.cpp  visitor_simulate_fight.cpp
tests/: test.cpp
